@@ -1,4 +1,0 @@
-#Sun, 11 Aug 2019 16:40:45 +1000
-
-
-E\:\\Data\\Java\\NetBeansProjects\\BackupGnuCashJ11=
